add jupyter env for docker

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,8 @@ TMDB_API_TOKEN=your_api_read_access_token_here
 # Optional: Specify which authentication method to use (key or token)
 # If not specified, the code will try API_KEY first, then API_TOKEN
 AUTH_METHOD=key
+
+
+# Docker env for jupyter
+JUPYTER_TOKEN=spark1234
+JUPYTER_PASSWORD=spark1234
